--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,15 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 body {
-    font-family: malgun, sans-serif;
     width: 100%;
     height: 100%;
     background-color: #cfc5c5;
 }
 
 .header{
+    height: 33px;
+    font-size: 0.8em;
     background-color: #1e2b37;
     color: #ffffff;
     text-align: center;
-    justify-content: center;            
+    justify-content: center;   
+}
+
+.container-fluid {
+    height: 120px;
+    font-size: small;
+    font-weight: 500;
 }
 
 .main-content {
