--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -5,6 +5,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #cfc5c5;
+    font-family: "Inter", sans-serif;
 }
 
 .header{
@@ -82,4 +83,89 @@ footer a {
 .no-link-style {
     text-decoration: none;  /* Remove o sublinhado */
     color: inherit;         /* Faz com que a cor do link herde a cor do texto ao redor */
+}
+
+/* CSS do Acordeão */
+
+#title-comissoes {
+    font-size: 1.5rem;
+    color: #192933;
+    font-weight: bold;
+    padding: 20px 0;
+}
+
+.acordeao {
+    width: 80%;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 12px;
+    cursor: pointer;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+}
+
+.acordeao-header {
+    width: 100%;
+    border: none;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: #192933;
+    cursor: pointer;
+}
+
+.title-comissoes {
+    flex: content;
+}
+
+.acordeao-header span {
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.acordeao-body {
+    text-align: center;
+    color: #192933;
+    font-size: 14px;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity .3s;
+}
+
+.acordeao-body.active {
+    height: 100%;
+    opacity: 1;
+    padding: 5px 0px;
+    padding: 50px 0;
+}
+
+.arrow {
+    transition: transform .2s linear;
+}
+
+.acordeao:has(.active) .arrow {
+    transform: rotate(180deg);
+}
+
+.acordeao-body-title {
+    background-color: #3739FE;
+    color: #fff;
+    padding: 2px 40px;
+    border-radius: 12px;
+    font-weight: bold;
+}
+
+.acordeao-body-title2 {
+    color: #3739FE;
+    font-weight: bold;
+}
+
+.p-body {
+    display: flex;
+    text-align: justify;
+    justify-content: center;
 }
