--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -2,10 +2,11 @@
 
 
 body {
-    width: 100%;
-    height: 100%;
-    background-color: #cfc5c5;
-    font-family: "Inter", sans-serif;
+    font-family: "Inter" !important; 
+    width: 100% !important; 
+    height: 100% !important; 
+    font-weight: normal !important; 
+    background-color: #cfc5c5 !important;
 }
 
 .header{
@@ -42,16 +43,11 @@ body {
 }
 
 .navbar-nav .nav-link.active {
-    color: #B41318 !important
+    color: #B41318 !important;
 }
 
 .navbar-dark .navbar-toggler {
     border-color: rgba(255, 255, 255, 0.1); 
-}
-
-.navbar-toggler-icon {
-    /* background-color: #BEBEBE;
-    border-radius: 6px; */
 }
 
 .navbar-collapse {
@@ -76,8 +72,14 @@ footer a {
     text-decoration: none;
 }
 
-.contato-inicio{
-    background-color: #1e2b37;
+.logo-oab {
+    width: 300px
+}
+
+@media (max-width: 768px) {
+    .logo-oab {
+        width: 250px
+    }
 }
 
 .no-link-style {
@@ -86,13 +88,6 @@ footer a {
 }
 
 /* CSS do Acordeão */
-
-#title-comissoes {
-    font-size: 1.5rem;
-    color: #192933;
-    font-weight: bold;
-    padding: 20px 0;
-}
 
 .acordeao {
     width: 80%;
@@ -113,10 +108,6 @@ footer a {
     font-weight: bold;
     color: #192933;
     cursor: pointer;
-}
-
-.title-comissoes {
-    flex: content;
 }
 
 .acordeao-header span {
@@ -168,4 +159,10 @@ footer a {
     display: flex;
     text-align: justify;
     justify-content: center;
+}
+
+.central-container {
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
 }
