--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -6,7 +6,7 @@ body {
     width: 100% !important; 
     height: 100% !important; 
     font-weight: normal !important; 
-    background-color: #cfc5c5 !important;
+    background-color: #DCDCDC !important;
 }
 
 .header{
@@ -26,7 +26,7 @@ body {
 
 .main-content {
     flex: 1;
-    background-color: #cfc5c5;
+    background-color: #DCDCDC;
 }
 
 .navbar {
@@ -57,7 +57,7 @@ body {
 }
 
 .location-info {
-    background-color: #cfc5c5;
+    background-color: #DCDCDC;
     text-align: center;    
 }
 
@@ -111,6 +111,7 @@ footer a {
 }
 
 .accordion-header span {
+    width: 100%;
     max-width: 100%;
     /* white-space: nowrap; */
     overflow: hidden;
@@ -166,4 +167,43 @@ footer a {
     display: flex; 
     flex-direction: column; 
     min-height: 100vh;
+}
+
+/* CSS da página Contato */
+
+.location-title {
+    font-weight: bold;
+    background-color: #192933;
+    color: #fff;
+    padding: 5px 50px;
+    border-radius: 20px;
+}
+
+.location-body {
+    padding: 10px 0;
+}
+
+.location-bold {
+    font-weight: bold;
+}
+
+/* CSS Diretoria Executiva */
+
+.dir-title1 {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding-top: 20px;
+}
+
+.dir-body-title {
+    background-color: #192933;
+    color: #fff;
+    border-radius: 20px;
+}
+
+.dir-body {
+    text-align: center;
+    width: 20%;
 }
