--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -198,6 +198,7 @@ footer a {
 }
 
 .dir-body-title {
+    font-size: 1rem;
     background-color: #192933;
     color: #fff;
     border-radius: 20px;
@@ -205,5 +206,15 @@ footer a {
 
 .dir-body {
     text-align: center;
-    width: 20%;
+    width: 25%;
+}
+
+.dir-body p {
+    margin: 0;
+    font-weight: bold;
+}
+
+.dir-body-ano {
+    font-size: 0.7rem;
+    line-height: 0.5;
 }
