--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -20,7 +20,7 @@ body {
 
 .container-fluid {
     height: 120px;
-    font-size: small;
+    font-size: 1rem;
     font-weight: 500;
 }
 
@@ -194,7 +194,7 @@ footer a {
     justify-content: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-top: 20px;
+    padding: 20px;
 }
 
 .dir-body-title {
@@ -206,15 +206,12 @@ footer a {
 
 .dir-body {
     text-align: center;
-    width: 25%;
 }
 
 .dir-body p {
-    margin: 0;
     font-weight: bold;
 }
 
 .dir-body-ano {
     font-size: 0.7rem;
-    line-height: 0.5;
 }
