--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -187,6 +187,10 @@ footer a {
     font-weight: bold;
 }
 
+.location-info {
+    padding-top: 20px;
+}
+
 /* CSS Diretoria Executiva */
 
 .dir-title1 {
@@ -194,24 +198,46 @@ footer a {
     justify-content: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding: 20px;
+    padding-top: 20px;
+    margin: 0;
 }
 
 .dir-body-title {
     font-size: 1rem;
     background-color: #192933;
     color: #fff;
-    border-radius: 20px;
+    border-radius: 40px;
 }
 
 .dir-body {
     text-align: center;
+    padding: 0 10%;
 }
 
 .dir-body p {
     font-weight: bold;
+    margin: 0;
 }
 
 .dir-body-ano {
     font-size: 0.7rem;
+    
+}
+
+/* CSS do Club */
+
+.club-body-title1 {
+    color:#192933;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0;
+    padding-top: 15px;
+}
+
+.club-body-title2 {
+    color: #3739FE;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 0;
+    padding-top: 10px;
 }
