--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -145,7 +145,9 @@ footer a {
 }
 
 .accordion-body-title {
+    margin: 20px auto 0;
     background-color: #3739FE;
+    width: 20%;
     color: #fff;
     padding: 2px 40px;
     border-radius: 12px;
@@ -226,6 +228,10 @@ footer a {
 
 /* CSS do Club */
 
+.club-title-accordion {
+    width: 100%;
+}
+
 .club-body-title1 {
     color:#192933;
     font-weight: bold;
@@ -240,4 +246,10 @@ footer a {
     font-size: 1rem;
     margin: 0;
     padding-top: 10px;
+}
+
+.link-basebyte {
+    color:#192933;
+    font-weight: bold;
+    text-decoration: none;
 }
