--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -206,15 +206,19 @@ footer a {
     justify-content: center;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-top: 20px;
+    padding-top: 40px;
     margin: 0;
 }
 
-.dir-body-title {
+.dir-body img {
+    margin-bottom: 20px;
+}
+
+.dir-body .dir-body-title {
     font-size: 1rem;
-    background-color: #192933;
-    color: #fff;
+    color: #192933;
     border-radius: 40px;
+    font-weight: bold;
 }
 
 .dir-body {
@@ -223,7 +227,9 @@ footer a {
 }
 
 .dir-body p {
-    font-weight: bold;
+    line-height: 0.5rem;
+    font-size: 0.85rem;
+    font-weight: 400;
     margin: 0;
 }
 
